k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: nginx-ns
  labels:
    app: Hiresmart

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: thursday1878/backend:latest

          ports:
            - containerPort: 5000
