k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: nginx-ns
  labels: 
    app: frontend
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: thursday1878/frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
