k8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-svc
  namespace: nginx-ns

spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007

  type: NodePort
